--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="brand text-center">
-                    <h class="h2">しっぽにちは！<br>しっぽちゃんです!</h2-->
+                    <h class="h3">しっぽにちは！<br>しっぽちゃんです!</h3>
                         <!--a onclick="ga('send', 'event', 'click_link', 'click', 'youtube_flyable');" href="https://www.youtube.com/watch?v=VnRiD0piabc" target="_blank" class="btn btn-danger btn-raised btn">
                             <i class="fa fa-play"></i> Vision video
                         </a-->
                         <h4 class="h4">僕たちは笑顔のための技術を創る<br>技術者・研究者のチーム<br>「Team-S!PPO」です<br></h4>
-                        <h5 class="h5"><br>このページはTeam-S!PPOの<br>・メディア<br>・コード<br>・プロダクト<br>・イベント<br>などの情報にアクセスできる<br>ポータルサイトです<br></h5>
-                        <h6 class="h6">技術であなたを笑顔に<br>-Technologies for your smile-</h6>
+                        <!--h5 class="h5"><br>このページはTeam-S!PPOの<br>・メディア<br>・コード<br>・プロダクト<br>・イベント<br>などの情報にアクセスできる<br>ポータルサイトです<br></h5>
+                        <h6 class="h6">技術であなたを笑顔に<br>-Technologies for your smile-</h6-->
                     </div>
                 </div>    
             </div>
@@ -174,9 +174,22 @@
             </div-->
 
             <div class="section text-center" id="news">
+                <h2 div class="title">ZEN展 出展中♪</h2>
+                    <a href="https://drive.google.com/open?id=1sww_LS2qCholTnfPFG8gMlOgZrDbwhjR" target="_blank"  rel=”noopener”>
+                    <button class="btn btn-primary btn-round btn-sm btn-rose">プロトタイプアプリ（android）</button></a><br>
+                    <h6 class="description"><br><br><br>
+                        <img src="./assets/images/ZEN.png" alt="Thumbnail Image"
+                        class="img-fluid"><br><br>
+                        AIカメラマンしっぽちゃん<br>
+                        しっぽのカメラでAI自動撮影<br>
+                </div>
+
+
+
+            <div class="section text-center" id="news">
                 <h2 div class="title">news </h2>
-                    <a href="https://note.com/team_sippo/n/n88fc503ca26e" target="_blank"  rel=”noopener”>
-                    <button class="btn btn-primary btn-round btn-sm btn-rose">2020.07.15 : Regular meeting</button></a><br>
+                    <a href="https://note.com/team_sippo/n/ndb3b8b7adb83" target="_blank"  rel=”noopener”>
+                    <button class="btn btn-primary btn-round btn-sm btn-rose">2020.07.19 : experiments day</button></a><br>
                     <a href="./news.html"><button class="btn btn-primary btn-link">view more...</button></a>
                 </div>
             </div>
@@ -185,7 +198,7 @@
                 <h2 class="title">About Us</h2>
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto">
-                        <h5 class="description"><br><br><br>
+                        <h6 class="description"><br><br><br>
                                 <img src="./assets/images/sippo_logo2.png" alt="Thumbnail Image"
                                 class="img-fluid"><br><br><br><br><br>
                             笑顔のために技術を創りたい<br>私たちはそんな想いで集った技術者・研究者のチームです。<br><br>
@@ -193,16 +206,16 @@
                             そんな技術を創っていきます。<br>
                             ー新しい体験を創り、自ら楽しみ、笑顔を創るー<br>
                             AI, IoTやデザインを駆使して<br>そんな活動が出来る場になることを目指しています。<br><br>
-                        </h5>
-                        <h3>Technologies for your smile<br></h3>
-                        <h4>-技術であなたを笑顔に-<br></h4>
+                        </h6>
+                        <h4>Technologies for your smile<br></h4>
+                        <h5>-技術であなたを笑顔に-<br></h5>
                     </div>
                 </div>
 
                 <h2 class="title" id="products">Products</h2>
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto">
-                        <h5 class="description">Team-S!PPOでは笑顔を創るためのプロダクトやサービスを開発しています。</h5>
+                        <h6 class="description">Team-S!PPOでは笑顔を創るためのプロダクトやサービスを開発しています。</h6>
                     </div>
                 </div>
                 <div class="row">
@@ -216,7 +229,7 @@
                             <h4 class="card-title">cheeeez</h4><h6>(フライアブル プロトタイプ)</h6>
                             <div class="card-body">
                                 <p class="card-description">
-                                    全員が「写真」を気にすることなく「今に集中」して<br>
+                                    <h6>全員が「写真」を気にすることなく「今に集中」して<br>
                                     本当に笑顔でその場を楽しめる<br>
                                     そんな世界素敵じゃないですか？<br><br>
                                     カメラマンだけ思い出にいない、<br>
@@ -226,7 +239,7 @@
                                     AIで良い写真を判定して自動撮影するカメラアプリのプロトタイプです。
                                     Flyable Service（TSG2019セミファイナル進出案件）の中核の技術です。<br>
                                     カメラスタートすれば、良い写真を自動撮影！<br>
-                                    <a href="https://team-sippo.github.io/privacy_policy.html">プライバシーポリシー</a>＆<a href="https://team-sippo.github.io/cheeeez.html">アプリ説明</a>
+                                    <a href="https://team-sippo.github.io/privacy_policy.html">プライバシーポリシー</a>＆<a href="https://team-sippo.github.io/cheeeez.html">アプリ説明</a></h6>
                                 </p>
                             </div>
                             <div class="col-md-6 ml-auto mr-auto">
@@ -245,13 +258,13 @@
                             <h4 class="card-title">cYclip<br><br></h4>
                             <div class="card-body">
                                 <p class="card-description">
-                                    いい天気、そうだ！サイクリングいこう！<br>
+                                   <h6>いい天気、そうだ！サイクリングいこう！<br>
                                     でもどこに？？？<br>
                                     いつも同じとこばっかりだなあ…<br><br>
                                     cYclipは自転車で行きたい場所を探すためのアプリです。<br>
                                     走りたい距離を設定したら表示されるレストラン一覧から
                                     気になるお店を選ぶとそこまでのナビを表示できます。<br>
-                                    普段いかない新しいお店と出会えるかも<br>
+                                    普段いかない新しいお店と出会えるかも<br></h6>
                                 </p>
                             </div>
                             <div class="col-md-6 ml-auto mr-auto">
@@ -279,12 +292,12 @@
                                     </h4>
                                     <div class="card-body">
                                         <p class="card-description">
-                                            全てはこの男から始まった。<br>Team-S!PPOの創始者。<br>
+                                            <h6>全てはこの男から始まった。<br>Team-S!PPOの創始者。<br>
                                             大学ではナノ材料の研究に没頭、有名論文誌に掲載。
                                             その傍ら、好奇心旺盛で独学でプログラムを習得。
                                             IT企業に研究員として就職し、ウェアラブルデバイスでのヒューマンセンシングやデータサイエンス業務に従事。
                                             その後、AIスタートアップへ転職。<br>
-                                            S!PPOでは、妄想を形にしたい。ITとPhysicalが融合させて、人が暮らしやすい世界を創りたい。</p>
+                                            S!PPOでは、妄想を形にしたい。ITとPhysicalが融合させて、人が暮らしやすい世界を創りたい。</p></h6>
                                     </div>
                                     <div class="card-footer justify-content-center">
                                         <a href="https://twitter.com/hurasu1" class="btn btn-link btn-just-icon"><i
@@ -307,8 +320,8 @@
                                     </h4>
                                     <div class="card-body">
                                         <p class="card-description">
-                                            TSG2019セミファイナリスト。<br>広島生まれ大阪育ち．高校時代にものづくりの楽しさを知りロボコンやロボカップなどの競技会にのめり込む。大学院でロボットの知能化の研究に従事，IEEE主催の国際会議での受賞歴等あり．博士（工学）．学術振興会特別研究員を経て，現在IT企業の研究所で勤務．直近の2年間は研究開発したヘルステックの欧州での事業化に挑戦．<br>
-                                            Team-S!PPOでは，全力で楽しみながら，新しいことにチャレンジ！
+                                            <h6>TSG2019セミファイナリスト。<br>広島生まれ大阪育ち．高校時代にものづくりの楽しさを知りロボコンやロボカップなどの競技会にのめり込む。大学院でロボットの知能化の研究に従事，IEEE主催の国際会議での受賞歴等あり．博士（工学）．学術振興会特別研究員を経て，現在IT企業の研究所で勤務．直近の2年間は研究開発したヘルステックの欧州での事業化に挑戦．<br>
+                                            Team-S!PPOでは，全力で楽しみながら，新しいことにチャレンジ！</h6>
                                         </p>
                                     </div>
                                     <div class="card-footer justify-content-center">
@@ -331,8 +344,9 @@
                                         <small class="card-description text-muted">Business Developerent Director<br>メカ技術開発、ビジネスモデル策定</small>
                                     </h4>
                                     <div class="card-body">
-                                        <p class="card-description">生まれ(東京)→育ち(名古屋)→大学(東京)→就職(名古屋)と、東京と名古屋を行ったり来たり。父方の実家が農家ということもあってか家庭菜園を愛する幼少期を過ごす。大学ではエコカーを目指した燃焼計測の研究に従事し、米国留学、学術振興会特別研究員(DC1)を経て、自動車メーカー研究所に就職。現在は農業分野への課題意識から自作の水耕栽培システムを自宅で開発中。<br>
-                                            自分がこれまでできなかった領域に挑戦したい！</p>
+                                        <p class="card-description">
+                                            <h6>生まれ(東京)→育ち(名古屋)→大学(東京)→就職(名古屋)と、東京と名古屋を行ったり来たり。父方の実家が農家ということもあってか家庭菜園を愛する幼少期を過ごす。大学ではエコカーを目指した燃焼計測の研究に従事し、米国留学、学術振興会特別研究員(DC1)を経て、自動車メーカー研究所に就職。現在は農業分野への課題意識から自作の水耕栽培システムを自宅で開発中。<br>
+                                            自分がこれまでできなかった領域に挑戦したい！</p></h6>
                                     </div>
                                     <div class="card-footer justify-content-center">
                                         <a href="https://twitter.com/KKsippo1" class="btn btn-link btn-just-icon"> <i
@@ -355,9 +369,9 @@
                                     </h4>
                                     <div class="card-body">
                                         <p class="card-description">
-                                            Team-S!PPOの名付け親。<br>
+                                            <h6>Team-S!PPOの名付け親。<br>
                                             幼少より音楽に触れ、14歳でピティナピアノステップ展開3を取得。所属する教室の演奏会では10年連続でトリをつとめる。作曲編曲が趣味で結婚式や演奏会に楽曲を提供を行う。20歳からはオーボエもはじめさらに幅を広げる。サントリーホールでの演奏経験があったり、日本経済新聞に投書が掲載されたり、遺跡発掘からシステム開発まで古今東西幅広い経験をもつマルチタレント。<br>
-                                            Team-S!PPOでは、アーティスト8、エンジニア2で右脳活動予定！
+                                            Team-S!PPOでは、アーティスト8、エンジニア2で右脳活動予定！</h6>
                                         </p>
                                     </div>
                                     <div class="card-footer justify-content-center">
@@ -411,10 +425,10 @@
             </ul>
             <div class="tab-content tab-space">
                 <div class="tab-pane active" id="Schedule" aria-expanded="true">
-                                        <p>毎週水曜日20：00～実施中。<br>
+                                        <p><h6>毎週水曜日20：00～実施中。<br>
                                             各自の専門分野の勉強会、意見交換、今後の活動など。<br>
                                             AI、IoT、IT、自転車、農業、音楽、芸術に関心のある方、起業や新しいことにチャレンジしようとしている方、超分野コミュニケーションしませんか？<br>
-                                            ↓興味がある方はポチッ↓
+                                            ↓興味がある方はポチッ↓</h6>
                                             <div class="justify-content-center">
                                                 <a href="https://forms.gle/DknXk1j6go5UsXjQA" class="btn btn-link btn-just-icon">
                                                 <i class="material-icons">mail</i></a>
@@ -422,14 +436,14 @@
                                         </p>
                 </div>
                 <div class="tab-pane" id="Experiments" aria-expanded="false">
-                                        <p>月1日実施中。<br>
+                                        <p><h6>月1日実施中。<br>
                                             メンバーで集まり、実験や実装を行います。<br>
-                                            コーヒー・お菓子タイムが多め。時間が許せば飲み会までなだれ込みます。<br></p>
+                                            コーヒー・お菓子タイムが多め。時間が許せば飲み会までなだれ込みます。<br><br><br><br><br><br><br></p></h6>
                 </div>
                 <div class="tab-pane" id="Event" aria-expanded="false">
-                                        <p>年に1回は何かやりたい！<br>
+                                        <p><h6>年に1回は何かやりたい！<br>
                                             年はじめに目標設定してそれにむけて準備します。<br>
-                                            ビジコン・展示会・公演会・イベント企画・参加など</p>
+                                            ビジコン・展示会・公演会・イベント企画・参加など<br><br><br><br><br><br><br></p></h6>
                 </div>
             </div>
             
@@ -539,7 +553,7 @@
                 </div-->
                 <div class="row">
                     <div class="col-md- ml-auto mr-auto text-center">
-                        <h5 class="description">活動・イベントの記録は↓メディアにて公開中！</h5>
+                        <h6 class="description">活動・イベントの記録は↓メディアにて公開中！</h6>
                         <div class="row">
                             <div class="col-lg-12 col-md-12">
                                 <ul class="nav nav-pills nav-pills-icons nav-pills-rose justify-content-center " role="tablist">
@@ -580,7 +594,7 @@
                         <h2 class="text-center title">contact us</h2>
                         <div class="row">
                             <div class="col-md-8 ml-auto mr-auto text-center">
-                                <h5 class="description">定例会参加希望、ご感想などありましたら、ご連絡下さい。</h5>
+                                <h6 class="description">定例会参加希望、ご感想などありましたら、ご連絡下さい。</h6>
                                     <a href="https://forms.gle/DknXk1j6go5UsXjQA" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="material-icons">mail</i></a>
                             </div>
                         </div>
