--- a/index.html
+++ b/index.html
@@ -175,13 +175,16 @@
 
             <div class="section text-center" id="news">
                 <h2 div class="title">ZEN展 出展中♪</h2>
-                    <a href="https://drive.google.com/open?id=1sww_LS2qCholTnfPFG8gMlOgZrDbwhjR" target="_blank"  rel=”noopener”>
+                    <a href="https://play.google.com/store/apps/details?id=io.github.team_sippo.cheeeez&hl=ja" target="_blank"  rel=”noopener”>
                     <button class="btn btn-primary btn-round btn-sm btn-rose">プロトタイプアプリ（android）</button></a><br>
                     <h6 class="description"><br><br><br>
                         <img src="./assets/images/ZEN.png" alt="Thumbnail Image"
                         class="img-fluid"><br><br>
                         AIカメラマンしっぽちゃん<br>
                         しっぽのカメラでAI自動撮影<br>
+                        撮った写真はLINEに自動投稿<br><br>
+                        7/23(木)、7/26（日）に実演予定<br>
+                        プロトタイプアプリはスマートフォンのカメラでしっぽちゃんのAIを体験できます。
                 </div>
 
 
