--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
             </div-->
 
-            <div class="section text-center" id="news">
+            <!--div class="section text-center" id="news">
                 <h2 div class="title">ZEN展 出展中♪</h2>
                     <a href="https://play.google.com/store/apps/details?id=io.github.team_sippo.cheeeez&hl=ja" target="_blank"  rel=”noopener”>
                     <button class="btn btn-primary btn-round btn-sm btn-rose">プロトタイプアプリ（android）</button></a><br>
@@ -185,14 +185,14 @@
                         撮った写真はLINEに自動投稿<br><br>
                         7/23(木)、7/26（日）に実演予定<br>
                         プロトタイプアプリはスマートフォンのカメラでしっぽちゃんのAIを体験できます。
-                </div>
+                </div-->
 
 
 
             <div class="section text-center" id="news">
                 <h2 div class="title">news </h2>
-                    <a href="https://note.com/team_sippo/n/nf479e67e418a" target="_blank"  rel=”noopener”>
-                    <button class="btn btn-primary btn-round btn-sm btn-rose">2020.07.22 : regular meeting</button></a><br>
+                    <a href="https://note.com/team_sippo/n/n555cfa3d0bde" target="_blank"  rel=”noopener”>
+                    <button class="btn btn-primary btn-round btn-sm btn-rose">2020.07.26 : regular meeting</button></a><br>
                     <a href="./news.html"><button class="btn btn-primary btn-link">view more...</button></a>
                 </div>
             </div>
