--- a/news.html
+++ b/news.html
@@ -62,11 +62,11 @@
          <div class="container">
           <div class="section text-center" id="news">
             <h2 div class="title">news </h2>
-                <button class="btn btn-rose " href="update"><i class="fa fa-clock-o"></i> 2020.07.22</button>
+                <button class="btn btn-rose " href="update"><i class="fa fa-clock-o"></i> 2020.07.26</button>
                 <div class="card-body justify-content-center">
                   <p class="card-description justify-content-center">
                     <!--iframe class="note-embed" src="https://note.com/embed/notes/n6a5164305795" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script-->
-                    <iframe class="note-embed" src="https://note.com/embed/notes/nf479e67e418a" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; left: 0; right: 0; margin: auto; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script>
+                    <iframe class="note-embed" src="https://note.com/embed/notes/n555cfa3d0bde" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; left: 0; right: 0; margin: auto; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script>
                   </p>
                 </div>
             </div>
@@ -136,7 +136,9 @@
               <div class="section text-center" id="news">
                 <h2 div class="title">Archives </h2>
                     <div class="card-body ">
-                      <p class="card-description ">              
+                      <p class="card-description "> 
+                        <a href="https://note.com/team_sippo/n/n1f91e106b2a7" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-smile-o"></i> 2020.07.26</a>
+                        <a href="https://note.com/team_sippo/n/nf479e67e418a" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.07.22</a>
                         <a href="https://note.com/team_sippo/n/ndb3b8b7adb83" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-wrench"></i> 2020.07.19</a>
                         <a href="https://note.com/team_sippo/n/n88fc503ca26e" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.07.15</a>
                         <a href="https://note.com/team_sippo/n/n6a5164305795" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.07.08</a>
