--- a/news.html
+++ b/news.html
@@ -137,6 +137,7 @@
                 <h2 div class="title">Archives </h2>
                     <div class="card-body ">
                       <p class="card-description "> 
+                        <a href="https://www.youtube.com/watch?v=koa6MOD4gnM" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-play"></i> 2020.08.12</a>                        
                         <a href="https://note.com/team_sippo/n/n3db2faee3482" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.08.12</a>                        
                         <a href="https://note.com/team_sippo/n/nd2102c61a028" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.08.05</a>                        
                         <a href="https://note.com/team_sippo/n/nfd909fec3298" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.07.29</a>
