--- a/news.html
+++ b/news.html
@@ -62,11 +62,11 @@
          <div class="container">
           <div class="section text-center" id="news">
             <h2 div class="title">news </h2>
-                <button class="btn btn-rose " href="update"><i class="fa fa-wrench"></i> 2020.08.29</button>
+                <button class="btn btn-rose " href="update"><i class="fa fa-clock-o"></i> 2020.12.02</button>
                 <div class="card-body justify-content-center">
                   <p class="card-description justify-content-center">
                     <!--iframe class="note-embed" src="https://note.com/embed/notes/n6a5164305795" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script-->
-                    <iframe class="note-embed" src="https://note.com/embed/notes/n6082f6deeb46" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; left: 0; right: 0; margin: auto; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script>
+                    <iframe class="note-embed" src="https://note.com/embed/notes/n1d9c075ea00a" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; left: 0; right: 0; margin: auto; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script>
                   </p>
                 </div>
             </div>
@@ -137,6 +137,21 @@
                 <h2 div class="title">Archives </h2>
                     <div class="card-body ">
                       <p class="card-description "> 
+                        <button class="btn btn-default " disabled href=""><i class="fa fa-clock-o"></i> 2019.11.25</button>
+                        <button class="btn btn-default " disabled href=""><i class="fa fa-clock-o"></i> 2019.11.18</button>
+                        <button class="btn btn-default " disabled href=""><i class="fa fa-clock-o"></i> 2019.11.11</button>
+                        <button class="btn btn-default " disabled href=""><i class="fa fa-clock-o"></i> 2019.11.04</button>
+                        <button class="btn btn-default " disabled href=""><i class="fa fa-clock-o"></i> 2019.10.28</button>
+                        <button class="btn btn-default " disabled href=""><i class="fa fa-wrench"></i> 2019.10.24</button>
+                        <button class="btn btn-default " disabled href=""><i class="fa fa-clock-o"></i> 2019.10.21</button>
+                        <button class="btn btn-default " disabled href=""><i class="fa fa-clock-o"></i> 2019.10.14</button>
+                        <button class="btn btn-default " disabled href=""><i class="fa fa-clock-o"></i> 2019.10.07</button>
+                        <button class="btn btn-default " disabled href=""><i class="fa fa-clock-o"></i> 2019.09.30</button>
+                        <button class="btn btn-default " disabled href=""><i class="fa fa-clock-o"></i> 2019.09.23</button>
+                        <button class="btn btn-default " disabled href=""><i class="fa fa-clock-o"></i> 2019.09.16</button>
+                        <button class="btn btn-default " disabled href=""><i class="fa fa-clock-o"></i> 2019.09.09</button>
+                        <button class="btn btn-default " disabled href=""><i class="fa fa-clock-o"></i> 2019.09.02</button>
+                        <a href="https://note.com/team_sippo/n/n6082f6deeb46" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-wrench"></i> 2020.08.29</a>
                         <a href="https://note.com/team_sippo/n/ne311113c3f52" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.08.26</a>
                         <a href="https://note.com/team_sippo/n/n4917e80a7c60" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.08.19</a>
                         <a href="https://www.youtube.com/watch?v=koa6MOD4gnM" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-play"></i> 2020.08.12</a>                        
