--- a/news.html
+++ b/news.html
@@ -62,11 +62,11 @@
          <div class="container">
           <div class="section text-center" id="news">
             <h2 div class="title">news </h2>
-                <button class="btn btn-rose " href="update"><i class="fa fa-clock-o"></i> 2021.03.03</button>
+                <button class="btn btn-rose " href="update"><i class="fa fa-clock-o"></i> 2021.03.10</button>
                 <div class="card-body justify-content-center">
                   <p class="card-description justify-content-center">
                     <!--iframe class="note-embed" src="https://note.com/embed/notes/n6a5164305795" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script-->
-                    <iframe class="note-embed" src="https://note.com/embed/notes/nb17a6887878d" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; left: 0; right: 0; margin: auto; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script>
+                    <iframe class="note-embed" src="https://note.com/embed/notes/n1ff3073775f1" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; left: 0; right: 0; margin: auto; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script>
                   </p>
                 </div>
             </div>
@@ -137,6 +137,7 @@
                 <h2 div class="title">Archives </h2>
                     <div class="card-body ">
                       <p class="card-description "> 
+                        <a href="https://note.com/team_sippo/n/nb17a6887878d" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2021.03.03</a>
                         <a href="https://note.com/team_sippo/n/ne33205ec6ca3" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2021.02.24</a>
                         <a href="https://note.com/team_sippo/n/n7c362b4c9c94" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2021.02.17</a>
                         <a href="https://note.com/team_sippo/n/n988365e60088" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.02.14</a>
