--- a/news.html
+++ b/news.html
@@ -66,7 +66,7 @@
                 <div class="card-body justify-content-center">
                   <p class="card-description justify-content-center">
                     <!--iframe class="note-embed" src="https://note.com/embed/notes/n6a5164305795" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script-->
-                    <iframe class="note-embed" src="https://note.com/embed/notes/n627fa8416833" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; left: 0; right: 0; margin: auto; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script>
+                    <iframe class="note-embed" src="https://note.com/embed/notes/n21b3c01ee8c8" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; left: 0; right: 0; margin: auto; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script>
                   </p>
                 </div>
             </div>
@@ -137,6 +137,7 @@
                 <h2 div class="title">Archives </h2>
                     <div class="card-body ">
                       <p class="card-description "> 
+                        <a href="https://note.com/team_sippo/n/n627fa8416833" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2021.03.31</a>
                         <a href="https://note.com/team_sippo/n/n9e32e137f305" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2021.03.24</a>
                         <a href="https://note.com/team_sippo/n/nc4dfedaef9e1" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-wrench"></i> 2021.03.21</a>
                         <a href="https://note.com/team_sippo/n/n1ff3073775f1" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2021.03.10</a>
