--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
 
             <div class="section text-center" id="news">
                 <h2 div class="title">news </h2>
-                    <a href="https://note.com/team_sippo/n/n21b3c01ee8c8" target="_blank"  rel=”noopener”>
-                    <button class="btn btn-primary btn-round btn-sm btn-rose">2021.04.07 : regular meeting</button></a><br>
+                    <a href="https://note.com/team_sippo/n/n10e85b18fefc" target="_blank"  rel=”noopener”>
+                    <button class="btn btn-primary btn-round btn-sm btn-rose">2021.04.08 : note</button></a><br>
                     <a href="./news.html"><button class="btn btn-primary btn-link">view more...</button></a>
                 </div>
             </div>
