--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
 
             <div class="section text-center" id="news">
                 <h2 div class="title">news </h2>
-                    <a href="https://note.com/team_sippo/n/nda81e28189d7" target="_blank"  rel=”noopener”>
-                    <button class="btn btn-primary btn-round btn-sm btn-rose">2021.06.23 : regular meeting</button></a><br>
+                    <a href="https://note.com/team_sippo/n/n2ecc889ec176" target="_blank"  rel=”noopener”>
+                    <button class="btn btn-primary btn-round btn-sm btn-rose">2021.06.26 : experiment day</button></a><br>
                     <a href="./news.html"><button class="btn btn-primary btn-link">view more...</button></a>
                 </div>
             </div>
