--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
 
             <div class="section text-center" id="news">
                 <h2 div class="title">news </h2>
-                    <a href="https://note.com/team_sippo/n/nf80a0a0bbe6c" target="_blank"  rel=”noopener”>
-                    <button class="btn btn-primary btn-round btn-sm btn-rose">2021.06.30 : Regular meeting</button></a><br>
+                    <a href="https://note.com/team_sippo/n/n204871e35cd9" target="_blank"  rel=”noopener”>
+                    <button class="btn btn-primary btn-round btn-sm btn-rose">2021.07.09 : Note</button></a><br>
                     <a href="./news.html"><button class="btn btn-primary btn-link">view more...</button></a>
                 </div>
             </div>
