--- a/news.html
+++ b/news.html
@@ -62,11 +62,11 @@
          <div class="container">
           <div class="section text-center" id="news">
             <h2 div class="title">news </h2>
-                <button class="btn btn-rose " href="update"><i class="fa fa-sticky-note"></i> 2021.07.09</button>
+                <button class="btn btn-rose " href="update"><i class="fa fa-sticky-note"></i> 2021.07.25</button>
                 <div class="card-body justify-content-center">
                   <p class="card-description justify-content-center">
                     <!--iframe class="note-embed" src="https://note.com/embed/notes/n6a5164305795" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script-->
-                    <iframe class="note-embed" src="https://note.com/embed/notes/n204871e35cd9" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; left: 0; right: 0; margin: auto; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script>
+                    <iframe class="note-embed" src="https://note.com/embed/notes/n57df474b9302" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; left: 0; right: 0; margin: auto; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script>
                   </p>
                 </div>
             </div>
@@ -137,6 +137,14 @@
                 <h2 div class="title">Archives </h2>
                     <div class="card-body ">
                       <p class="card-description "> 
+                        <a href="https://note.com/team_sippo/n/ncec90c324c82" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2021.07.21</a>
+                        <a href="https://note.com/hurasu1/n/n3a1ddb799021" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.07.19</a>
+                        <a href="https://note.com/b_b_/n/n96770accde47" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.07.19</a>
+                        <a href="https://note.com/team_sippo/n/ne68514d4db26" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2021.07.14</a>
+                        <a href="https://note.com/team_sippo/n/ne5d34ffa142f" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.07.13</a>
+                        <a href="https://note.com/hurasu1/n/nd54e06356c79" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.07.11</a>
+                        <a href="https://note.com/b_b_/n/nba49c9ad4ea0" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.07.11</a>
+                        <a href="https://note.com/team_sippo/n/n204871e35cd9" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.07.09</a>
                         <a href="https://note.com/b_b_/n/n53768f46d771" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.07.07</a>
                         <a href="https://note.com/team_sippo/n/n71348d69a38b" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2021.07.07</a>
                         <a href="https://note.com/team_sippo/n/nf80a0a0bbe6c" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2021.06.30</a>
