--- a/news.html
+++ b/news.html
@@ -62,11 +62,11 @@
          <div class="container">
           <div class="section text-center" id="news">
             <h2 div class="title">news </h2>
-                <button class="btn btn-rose " href="update"><i class="fa fa-sticky-note"></i> 2021.07.28</button>
+                <button class="btn btn-rose " href="update"><i class="fa fa-sticky-note"></i> 2021.08.14</button>
                 <div class="card-body justify-content-center">
                   <p class="card-description justify-content-center">
                     <!--iframe class="note-embed" src="https://note.com/embed/notes/n6a5164305795" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script-->
-                    <iframe class="note-embed" src="https://note.com/embed/notes/n533b2a6940b8" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; left: 0; right: 0; margin: auto; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script>
+                    <iframe class="note-embed" src="https://note.com/embed/notes/n1d6faaeddd82" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; left: 0; right: 0; margin: auto; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script>
                   </p>
                 </div>
             </div>
@@ -137,6 +137,11 @@
                 <h2 div class="title">Archives </h2>
                     <div class="card-body ">
                       <p class="card-description "> 
+                        <a href="https://note.com/b_b_/n/ne44c0d3ba700" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.08.09</a>
+                        <a href="https://note.com/team_sippo/n/n9acc9fc5f168" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2021.08.04</a>
+                        <a href="https://note.com/b_b_/n/n5211db78183c" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.08.01</a>
+                        <a href="https://note.com/team_sippo/n/nbff6d8b80aa1" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.08.01</a>
+                        <a href="https://note.com/team_sippo/n/n533b2a6940b8" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2021.07.28</a>
                         <a href="https://note.com/team_sippo/n/n57df474b9302" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.07.25</a>
                         <a href="https://note.com/team_sippo/n/ncec90c324c82" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2021.07.21</a>
                         <a href="https://note.com/hurasu1/n/n3a1ddb799021" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.07.19</a>
