--- a/news.html
+++ b/news.html
@@ -137,23 +137,23 @@
                 <h2 div class="title">Archives </h2>
                     <div class="card-body ">
                       <p class="card-description "> 
-                        <a href="https://note.com/team_sippo/n/n108526db5613" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.08.18</a>
-                        <a href="https://note.com/team_sippo/n/n5d1777aad78a" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.08.18</a>
-                        <a href="https://note.com/b_b_/n/nc609214f7c6f" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.08.16</a>
+                        <a href="https://note.com/team_sippo/n/n108526db5613" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-coffee"></i> 2021.08.18</a>
+                        <a href="https://note.com/team_sippo/n/n5d1777aad78a" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-coffee"></i> 2021.08.18</a>
+                        <a href="https://note.com/b_b_/n/nc609214f7c6f" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-coffee"></i> 2021.08.16</a>
                         <a href="https://note.com/team_sippo/n/n1d6faaeddd82" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2021.08.14</a>
-                        <a href="https://note.com/b_b_/n/ne44c0d3ba700" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.08.09</a>
+                        <a href="https://note.com/b_b_/n/ne44c0d3ba700" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-coffee"></i> 2021.08.09</a>
                         <a href="https://note.com/team_sippo/n/n9acc9fc5f168" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2021.08.04</a>
-                        <a href="https://note.com/b_b_/n/n5211db78183c" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.08.01</a>
-                        <a href="https://note.com/team_sippo/n/nbff6d8b80aa1" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.08.01</a>
+                        <a href="https://note.com/b_b_/n/n5211db78183c" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-coffee"></i> 2021.08.01</a>
+                        <a href="https://note.com/team_sippo/n/nbff6d8b80aa1" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-coffee"></i> 2021.08.01</a>
                         <a href="https://note.com/team_sippo/n/n533b2a6940b8" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2021.07.28</a>
-                        <a href="https://note.com/team_sippo/n/n57df474b9302" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.07.25</a>
+                        <a href="https://note.com/team_sippo/n/n57df474b9302" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-coffee"></i> 2021.07.25</a>
                         <a href="https://note.com/team_sippo/n/ncec90c324c82" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2021.07.21</a>
                         <a href="https://note.com/hurasu1/n/n3a1ddb799021" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.07.19</a>
-                        <a href="https://note.com/b_b_/n/n96770accde47" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.07.19</a>
+                        <a href="https://note.com/b_b_/n/n96770accde47" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-coffee"></i> 2021.07.19</a>
                         <a href="https://note.com/team_sippo/n/ne68514d4db26" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2021.07.14</a>
                         <a href="https://note.com/team_sippo/n/ne5d34ffa142f" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.07.13</a>
                         <a href="https://note.com/hurasu1/n/nd54e06356c79" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.07.11</a>
-                        <a href="https://note.com/b_b_/n/nba49c9ad4ea0" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.07.11</a>
+                        <a href="https://note.com/b_b_/n/nba49c9ad4ea0" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-coffee"></i> 2021.07.11</a>
                         <a href="https://note.com/team_sippo/n/n204871e35cd9" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.07.09</a>
                         <a href="https://note.com/b_b_/n/n53768f46d771" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.07.07</a>
                         <a href="https://note.com/team_sippo/n/n71348d69a38b" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2021.07.07</a>
