--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
 
             <div class="section text-center" id="news">
                 <h2 div class="title">news </h2>
-                    <a href="https://note.com/team_sippo/n/n93926c86f5d5" target="_blank"  rel=”noopener”>
-                    <button class="btn btn-primary btn-round btn-sm btn-rose">2021.08.18 : Regular meeting</button></a><br>
+                    <a href="https://note.com/team_sippo/n/n9ce887b8e774" target="_blank"  rel=”noopener”>
+                    <button class="btn btn-primary btn-round btn-sm btn-rose">2021.09.04 : Cafe</button></a><br>
                     <a href="./news.html"><button class="btn btn-primary btn-link">view more...</button></a>
                 </div>
             </div>
