--- a/news.html
+++ b/news.html
@@ -62,11 +62,11 @@
          <div class="container">
           <div class="section text-center" id="news">
             <h2 div class="title">news </h2>
-                <button class="btn btn-rose " href="update"><i class="fa fa-clock-o"></i> 2021.08.18</button>
+                <button class="btn btn-rose " href="update"><i class="fa fa-coffee"></i> 2021.09.04</button>
                 <div class="card-body justify-content-center">
                   <p class="card-description justify-content-center">
                     <!--iframe class="note-embed" src="https://note.com/embed/notes/n6a5164305795" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script-->
-                    <iframe class="note-embed" src="https://note.com/embed/notes/n93926c86f5d5" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; left: 0; right: 0; margin: auto; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script>
+                    <iframe class="note-embed" src="https://note.com/embed/notes/n9ce887b8e774" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; left: 0; right: 0; margin: auto; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script>
                   </p>
                 </div>
             </div>
@@ -137,6 +137,16 @@
                 <h2 div class="title">Archives </h2>
                     <div class="card-body ">
                       <p class="card-description "> 
+                        <a href="https://note.com/team_sippo/n/n96d445ced08b" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2021.09.01</a>
+                        <a href="https://note.com/b_b_/n/n96d90fc280e7" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-coffee"></i> 2021.08.29</a>
+                        <a href="https://note.com/hurasu1/n/na00b4d4ad267" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.08.29</a>
+                        <a href="https://note.com/team_sippo/n/n013f5fc9390f" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-coffee"></i> 2021.08.28</a>
+                        <a href="https://note.com/team_sippo/n/nf09e08097df0" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2021.08.28</a>
+                        <a href="https://note.com/team_sippo/n/n5c41681cbd38" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-coffee"></i> 2021.08.22</a>
+                        <a href="https://note.com/hurasu1/n/n196ab7d1ed18" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.08.22</a>
+                        <a href="https://note.com/b_b_/n/ne093381aa544" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-coffee"></i> 2021.08.21</a>
+                        <a href="https://note.com/team_sippo/n/n7d2ad0b92a2c" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-coffee"></i> 2021.08.21</a>
+                        <a href="https://note.com/team_sippo/n/n93926c86f5d5" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2021.08.18</a>
                         <a href="https://note.com/team_sippo/n/n108526db5613" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-coffee"></i> 2021.08.18</a>
                         <a href="https://note.com/team_sippo/n/n5d1777aad78a" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-coffee"></i> 2021.08.18</a>
                         <a href="https://note.com/b_b_/n/nc609214f7c6f" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="fa fa-coffee"></i> 2021.08.16</a>
